# pokeAssistant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: data.md  financial-modeling.md  qa.md
.claude/commands/: verify.md
.claude/contexts/: dev.md  research.md  review.md
.claude/docs/data/: gemrate.md  pricecharting.md  tcgplayer.md
.claude/hooks/: block-dangerous-commands.sh  lights-on-code-post.sh  lights-on-code.sh
docs/superpowers/plans/: 2026-03-27-fastapi-layer.md  2026-04-01-cardvision.md
docs/superpowers/specs/: 2026-03-27-fastapi-layer-design.md  2026-04-01-cardvision-design.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
src/cardvision/: __init__.py  adapter.py  detector.py  embedder.py  exceptions.py  index.py  ocr.py  result.py  scanner.py
src/pokeassistant/: api.py  cli.py  config.py  database.py  db.py  models.py  repository.py  schemas.py
src/pokeassistant/repositories/: __init__.py  sqlalchemy_repo.py
src/pokeassistant/scrapers/: gemrate.py  pricecharting.py  tcgcsv.py  tcgplayer.py  trends.py
src/pokeassistant/vision/: __init__.py  pokemon_adapter.py
tests/: conftest.py  test_api.py  test_cli.py  test_db.py  test_gemrate.py  test_models.py  test_pokemon_adapter.py  test_pricecharting.py  test_repository.py  test_tcgcsv.py  test_tcgplayer.py  test_trends.py
tests/fixtures/: gemrate_card_details.json  gemrate_search.json  pricecharting_card.html  tcgcsv_groups.json  tcgcsv_prices.json  tcgcsv_products.json  tcgplayer_listings.json  tcgplayer_market_price.json  tcgplayer_price_history.json  tcgplayer_product_details.json  trends_interest.json
tests/test_cardvision/: conftest.py  test_detector.py  test_embedder.py  test_index.py  test_ocr.py  test_scanner.py
