[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeassistant"
version = "0.1.0"
description = "Pokemon TCG price tracking and analysis tool"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "pytrends>=4.9",
    "requests>=2.31",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
pokeassistant = "pokeassistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
