[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeassistant"
version = "0.2.0"
description = "Pokemon TCG price tracking and analysis tool"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "pytrends>=4.9",
    "requests>=2.31",
    "pandas>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "httpx>=0.27",
]
vision = [
    "torch>=2.0",
    "torchvision>=0.15",
    "faiss-cpu>=1.7",
    "opencv-python-headless>=4.8",
    "easyocr>=1.7",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.scripts]
pokeassistant = "pokeassistant.cli:main"
pokeassistant-api = "pokeassistant.api:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires model weight downloads, skip in CI",
]
